--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,6 +5,7 @@
       "@typescript-eslint/no-explicit-any": "off",
       "@typescript-eslint/no-empty-interface": "off",
       "@typescript-eslint/no-empty-object-type": "off",
+      "@typescript-eslint/no-sync-scripts": "off",
       "react/jsx-no-comment-textnodes":"off"
     }
 }
