--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,6 +6,7 @@
       "@typescript-eslint/no-empty-interface": "off",
       "@typescript-eslint/no-empty-object-type": "off",
       "@typescript-eslint/no-sync-scripts": "off",
+      "@typescript-eslint/no-unused-expressions":"off",
       "react/jsx-no-comment-textnodes":"off"
     }
 }
