--- a/package.json
+++ b/package.json
@@ -27,12 +27,14 @@
     "@reduxjs/toolkit": "^2.2.7",
     "@supabase/ssr": "^0.5.1",
     "@supabase/supabase-js": "^2.45.4",
+    "chart.js": "^4.4.5",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.447.0",
     "next": "14.2.14",
     "react": "^18.3.1",
+    "react-chartjs-2": "^5.2.0",
     "react-daum-postcode": "^3.1.3",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.0",
